--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
     <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="https://carolmaroleq.github.io/">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Menu</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="html/about_me.html">About Me</a></li>
+            <li><a class="dropdown-item" href="https://carolmaroleq.github.io/AboutMe/">About Me</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="html/Repositories.html">Repositories</a></li>
+            <li><a class="dropdown-item" href="https://carolmaroleq.github.io/Repositories/">Repositories</a></li>
           </ul>
         </li>
       </ul>
